--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Test
+      - name: Build changelog
         run: |
           find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.md" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.md" ! -path "${{ github.workspace }}/package.json" -delete
           find ${{ github.workspace }} -type d -empty -delete
           npm install
           npm run md:changelog
           find ${{ github.workspace }} -type f ! -path "${{ github.workspace }}/CHANGELOG.html" ! -path "${{ github.workspace }}/CHANGELOG_de-DE.html" -delete
-          ls -la
 
       - name: Upload as artifact
         uses: actions/upload-artifact@v4
@@ -59,30 +58,27 @@ jobs:
           name: changelog
           path: ${{ github.workspace }}
 
-  # build-extension:
-  #   runs-on: ubuntu-latest
-  #   needs: validate
-  #   steps:
-  #     - name: Download validated directory
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: validated-plugin
+  build-extension:
+    runs-on: ubuntu-latest
+    needs: validate
+    steps:
+      - name: Get validated plugin
+        uses: actions/download-artifact@v4
+        with:
+          name: validated-plugin
 
-  #     - name: Install shopware-cli
-  #       uses: shopware/shopware-cli-action@v1
+      - name: Install shopware-cli
+        uses: shopware/shopware-cli-action@v1
 
-  #     - name: Build extension
-  #       run: | 
-  #         shopware-cli extension build ${{ github.workspace }}
-  #         shopt -s extglob
-  #         mkdir BlurElysiumSlider
-  #         mv !(BlurElysiumSlider) BlurElysiumSlider/
+      - name: Build and zip extension
+        run: |
+          shopware-cli extension zip --disable-git ${{ github.workspace }}
 
-  #     - name: Upload as artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: BlurElysiumSlider
-  #         path: ${{ github.workspace }}
+      - name: Upload as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlurElysiumSlider
+          path: ${{ github.workspace }}/BlurElysiumSlider.zip
 
   deploy-extension-to-store:
     if: startsWith(github.ref, 'refs/tags/')
@@ -103,7 +99,6 @@ jobs:
       - name: build and zip
         run: |
           shopware-cli extension zip --disable-git ${{ github.workspace }}
-          ls -la ${{ github.workspace }}
 
       - name: Deploy extension to store
         run: |
