--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: CI
 
+env:
+  SHOPWARE_CLI_VERSION: '0.10.4'
+
 on:
   push:
     branches:
@@ -21,7 +24,7 @@ jobs:
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v3
         with:
-          version: 0.7.1
+          version: ${{ env.SHOPWARE_CLI_VERSION }}
 
       - name: Validate plugin
         run: |
@@ -70,7 +73,9 @@ jobs:
           name: validated-plugin
 
       - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+        uses: shopware/shopware-cli-action@v3
+        with:
+          version: ${{ env.SHOPWARE_CLI_VERSION }}
 
       - name: Build and zip extension
         run: |
@@ -96,7 +101,9 @@ jobs:
           name: validated-plugin
 
       - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+        uses: shopware/shopware-cli-action@v3
+        with:
+          version: ${{ env.SHOPWARE_CLI_VERSION }}
 
       - name: build and zip
         run: |
@@ -117,7 +124,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install shopware-cli
-        uses: shopware/shopware-cli-action@v1
+        uses: shopware/shopware-cli-action@v3
+        with:
+          version: ${{ env.SHOPWARE_CLI_VERSION }}
 
       - name: Update store page
         run: |
