--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,32 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint administration
+        run: npm run lint:administration
+
+      - name: Lint storefront
+        run: npm run lint:storefront
+
   validate:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v3
@@ -47,7 +68,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build changelog
         run: |
@@ -65,7 +86,7 @@ jobs:
 
   build-extension:
     runs-on: ubuntu-latest
-    needs: validate
+    needs: [validate, lint]
     steps:
       - name: Get validated plugin
         uses: actions/download-artifact@v4
@@ -90,7 +111,7 @@ jobs:
   deploy-extension-to-store:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    needs: validate
+    needs: [validate, lint]
     env:
       SHOPWARE_CLI_ACCOUNT_EMAIL: ${{ secrets.SHOPWARE_CLI_ACCOUNT_EMAIL }}
       SHOPWARE_CLI_ACCOUNT_PASSWORD: ${{ secrets.SHOPWARE_CLI_ACCOUNT_PASSWORD }}
@@ -121,7 +142,7 @@ jobs:
       SHOPWARE_CLI_ACCOUNT_PASSWORD: ${{ secrets.SHOPWARE_CLI_ACCOUNT_PASSWORD }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v3
